<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        style="@style/tittleAlertDialog"
        android:layout_height="wrap_content"
        android:text="@string/position"/>

    <TextView
        android:layout_width="match_parent"
        style="@style/subTittleAlertDialog"
        android:text=""
        android:layout_height="wrap_content"
        android:id="@+id/titleItemSelected_keyCutter" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <RadioButton
            style="@style/AlertDialog.AppCompat.myStyle"
            android:text="@string/position_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio1_keyCutter"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position_2"
            style="@style/AlertDialog.AppCompat.myStyle"
            android:id="@+id/radio2_keyCutter"/>
        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/position_3"
            android:layout_height="wrap_content"
            style="@style/AlertDialog.AppCompat.myStyle"
            android:id="@+id/radio3_keyCutter"/>
        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/position_4"
            android:layout_height="wrap_content"
            style="@style/AlertDialog.AppCompat.myStyle"
            android:id="@+id/radio4_keyCutter"/>
        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/position_5"
            android:layout_height="wrap_content"
            style="@style/AlertDialog.AppCompat.myStyle"
            android:id="@+id/radio5_keyCutter"/>

    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:textAllCaps="true"
        android:id="@+id/btnSelectedPosition_keyCutter"/>

</LinearLayout>