<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu_toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/qu_te_gustar_a_ordenar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/chorizosPlace"
                android:orientation="vertical"
                android:padding="20dp"
                android:focusable="true">

                <TextView
                    style="@style/subTittleAlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hot_dog" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/chorizo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/sausagesPlace"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/subTittleAlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sausage" />

                <ImageView
                    android:id="@+id/goChorizo"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/salchichas55" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>