<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".storehouse.StoreHouseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/storehouse_toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/order_list"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storehouse_toolbar"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtShowOrdered"
            style="@style/myActionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/txtShowDelivered"
            style="@style/myActionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/txtShowIncomplete"
            style="@style/myActionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecondContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainContainer"
        android:weightSum="3">

        <TextView
            style="@style/myActionSubBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ordered" />

        <TextView
            style="@style/myActionSubBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preparing" />

        <TextView
            style="@style/myActionSubBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incomplete" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storeHouseRecyclerView_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/SecondContainer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGoReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_assignment_black_24dp" />

</RelativeLayout>